# Vortix

./: .gitattributes  .gitignore  README.md  code_example.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  settings.html  theme-manager.html  tsconfig.app.json  tsconfig.server.json  vite.config.ts
server/: app.ts  (+4 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_shortcuts_group.sql  0003_shortcut_groups.sql  0004_history_suggestion_index.sql  0005_sftp_dir_cache.sql  0006_history_suggestion_perf.sql  0007_transfer_history.sql  0008_sync_remote_token.sql
src-tauri/src/: lib.rs  main.rs  time_utils.rs
src-tauri/src/agent/: bridge.rs  bridge_connections.rs  bridge_folders.rs  bridge_shortcuts.rs  mod.rs  process.rs  types.rs
src-tauri/src/agent/bridge_connections/: auth.rs  batch_ping.rs  crud.rs  types.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: backup.rs  legacy.rs  legacy_paths.rs  mod.rs  schema.rs  sftp_dir_cache.rs  transfer_history.rs
src-tauri/src/db/legacy/: archive.rs  importer.rs  models.rs  readers.rs
src-tauri/src/server/: helpers.rs  known_hosts.rs  mod.rs  remote_history.rs  response.rs  types.rs
src-tauri/src/server/helpers/: connection_row.rs  json_utils.rs  settings_store.rs
src-tauri/src/server/helpers/russh_connect/: auth.rs  establish.rs  jump.rs  mod.rs  types.rs
src-tauri/src/server/routes/: connections.rs  editor.rs  folders.rs  fs.rs  health.rs  history.rs  maintenance.rs  mod.rs  presets.rs  settings.rs  shortcut_groups.rs  shortcuts.rs  ssh_keys.rs  sync.rs  themes.rs  transfers.rs
src-tauri/src/server/routes/connections/: auth.rs  batch.rs  connectivity_ping.rs  connectivity_test.rs  key_upload.rs  key_upload_legacy.rs  local_terminal.rs  mutate.rs  read.rs
src-tauri/src/server/types/: connections.rs  folders_shortcuts.rs  presets_ssh_keys.rs  sync.rs  sync_payload.rs  themes_fs.rs
src-tauri/src/server/ws/: local_pty_worker.rs  mod.rs  sftp_worker.rs  socket_handlers.rs  ssh_worker.rs
src-tauri/src/sftp_bridge/: mod.rs
src-tauri/src/sync/: auto.rs  chunk.rs  crypto.rs  diff.rs  format.rs  mod.rs  service.rs  transfer.rs  types.rs
src-tauri/src/sync/provider/: git_cli.rs  local.rs  mod.rs  opendal.rs
src-tauri/src/sync/service/: endpoints_basic.rs  endpoints_check.rs  endpoints_transfer.rs  io_codec.rs  io_remote.rs  payload_apply.rs  payload_collect.rs  sync_state_cache.rs
src-tauri/src/terminal_bridge/: mod.rs
src-tauri/vortix-agent/: Cargo.toml
src-tauri/vortix-agent/src/: main.rs
(+431 files in other folders)
