[package]
name = "vortix"
version = "0.1.0"
description = "Vortix - SSH/服务器管理桌面工具"
authors = ["Vortix"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
window-vibrancy = "0.5"

# HTTP/WS 服务器（嵌入式）
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
futures = "0.3"
async-trait = "0.1"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# 数据库与工具
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
rand_core = "0.6"
pbkdf2 = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
open = "5"
dirs = "5"
russh = "0.58"
russh-sftp = "2.1.1"
portable-pty = "0.8"
url = "2"

# 工具
thiserror = "2"

# sync
opendal = { version = "0.55", default-features = false, features = ["services-s3", "services-webdav"] }
blake3 = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
rayon = "1"
moka = { version = "0.12", features = ["future"] }
tokio-util = "0.7"
dashmap = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "stream", "json"] }
wait-timeout = "0.2"

# 字体枚举
font-kit = "0.14"

[package.metadata.bundle.windows]
dpi-aware = true

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_System_Com"] }
